fix 1.读取奖励配置历史编辑记录导致的NPE 2.服务器环境下不存在GLFW导致的异常