@@ -1,13 +1,14 @@
 package xin.vanilla.sakura.util;
 
+import net.minecraftforge.api.distmarker.Dist;
+import net.minecraftforge.api.distmarker.OnlyIn;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.lwjgl.glfw.GLFW;
 
 import java.lang.reflect.Field;
 import java.util.*;
-import java.util.stream.Collectors;
 
+@OnlyIn(Dist.CLIENT)
 public class GLFWKeyHelper {
     private static final Logger LOGGER = LogManager.getLogger();
 
@@ -26,7 +27,7 @@ public class GLFWKeyHelper {
     ));
 
     static {
-        Field[] fields = GLFW.class.getDeclaredFields();
+        Field[] fields = GLFWKey.class.getDeclaredFields();
         for (Field field : fields) {
             String fieldName = field.getName();
             try {
@@ -132,7 +133,7 @@ public class GLFWKeyHelper {
 
     public static List<String> getKeyRecordKeys(int... codes) {
         List<String> recordKeys = new ArrayList<>();
-        List<Integer> sortedCodes = Arrays.stream(codes).boxed().sorted().collect(Collectors.toList());
+        List<Integer> sortedCodes = Arrays.stream(codes).boxed().sorted().toList();
         for (Integer code : sortedCodes) {
             String name = KEY_CODE_TO_NAME.get(code);
             if (name == null) continue;
@@ -143,7 +144,7 @@ public class GLFWKeyHelper {
 
     public static List<String> getMouseRecordKeys(int... codes) {
         List<String> recordKeys = new ArrayList<>();
-        List<Integer> sortedCodes = Arrays.stream(codes).boxed().sorted().collect(Collectors.toList());
+        List<Integer> sortedCodes = Arrays.stream(codes).boxed().sorted().toList();
         for (Integer code : sortedCodes) {
             String name = MOUSE_CODE_TO_NAME.get(code);
             if (name == null) continue;
